--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   height: auto;
   border-radius: 8px;
   background-color: #fff;
-
+  font-size: large;
   font-family: 'Times New Roman', Times, serif;
   text-shadow: #919191 5px;
 }
